added options to sell and buy coachs and plays
